--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "i": "^0.3.7",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^6.18.0",
     "mongoose": "^6.6.5",
     "polyline-encoded": "^0.0.9",
     "zod": "^3.19.1"
