--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,30 @@
+### Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+*.log
+
+### OS
 .DS_Store
+
+### Env files (keep examples)
 .env
-**/.DS_Store
-/node_modules
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+!.env.example
+
+### Frontend build output
+frontend/build/
+
+### Backend build output
+backend/dist/
+
+### Test coverage
+coverage/
+
+### Yarn PnP (if used)
+.pnp
+.pnp.js
