--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon src/server.js"
-  },
+  "server": "nodemon src/server.js",
+  "lint": "eslint src/",
+  "lint:fix": "eslint src/ --fix",
+  "format": "prettier --write src/",
+  "format:check": "prettier --check src/"
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Tochey/User_Service.git"
@@ -30,6 +34,22 @@
     "zod": "^3.19.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "eslint": "^8.0.0",
+    "eslint-config-prettier": "^9.0.0"
+  },
+  "eslintConfig": {
+    "env": {
+      "node": true,
+      "es2021": true
+    },
+    "extends": [
+      "eslint:recommended",
+      "prettier"
+    ],
+    "parserOptions": {
+      "ecmaVersion": "latest",
+      "sourceType": "module"
+    }
   }
 }
