Configure ESLint for frontend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,14 +36,13 @@
     "format:check": "prettier --check src/"
   },
   "devDependencies": {
-    "eslint-config-prettier": "^9.0.0"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest",
-      "prettier"
-    ]
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "prettier": "^3.6.2"
   },
   "browserslist": {
     "production": [
