--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-  "server": "nodemon src/server.js",
-  "lint": "eslint src/",
-  "lint:fix": "eslint src/ --fix",
-  "format": "prettier --write src/",
-  "format:check": "prettier --check src/"
-},
+    "server": "nodemon src/server.js",
+    "lint": "eslint src/",
+    "lint:fix": "eslint src/ --fix",
+    "format": "prettier --write src/",
+    "format:check": "prettier --check src/"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Tochey/User_Service.git"
@@ -36,20 +36,9 @@
   "devDependencies": {
     "nodemon": "^2.0.20",
     "eslint": "^8.0.0",
-    "eslint-config-prettier": "^9.0.0"
-  },
-  "eslintConfig": {
-    "env": {
-      "node": true,
-      "es2021": true
-    },
-    "extends": [
-      "eslint:recommended",
-      "prettier"
-    ],
-    "parserOptions": {
-      "ecmaVersion": "latest",
-      "sourceType": "module"
-    }
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "prettier": "^3.3.3"
   }
 }
