--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,27 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "autoprefixer": "^10.4.20",
-    "axios": "^1.2.1",
-    "bootstrap": "^5.2.2",
-    "data": "^0.6.1",
+    "@testing-library/user-event": "^14.6.1",
+    "autoprefixer": "^10.4.21",
+    "axios": "^1.11.0",
+    "bootstrap": "^5.3.8",
+    "data": "^1.0.0",
     "i": "^0.3.7",
     "jwt-decode": "^3.1.2",
     "leaflet": "^1.9.4",
     "moment": "^2.29.4",
-    "postcss": "^8.4.47",
+    "postcss": "^8.5.6",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.6.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^7.8.2",
     "react-scripts": "^5.0.1",
-    "table": "^6.8.1",
-    "tailwindcss": "^3.4.17",
-    "web-vitals": "^2.1.4"
+    "table": "^6.9.0",
+    "tailwindcss": "^3.4.0",
+    "web-vitals": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,7 +36,7 @@
     "format:check": "prettier --check src/"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.13",
+    "@tailwindcss/forms": "^0.5.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.32.0",
